
set (IOGLTF_MAJOR_VERSION 0)
set (IOGLTF_MINOR_VERSION 1)
set (IOGLTF_PATCH_VERSION 0)
set (IOGLTF_VERSION ${IOGLTF_MAJOR_VERSION}.${IOGLTF_MINOR_VERSION}.${IOGLTF_PATCH_VERSION})

# IO-glTF dynamic libray
file (GLOB_RECURSE IO-glTF-src ../IO-glTF/*.cpp)
include_directories (
	${CASABLANCA_INCLUDES}
	${FBX_SDK_INCLUDES}
	/usr/local/include
)
add_library (IO-glTF SHARED ${IO-glTF-src})
target_link_libraries (
	IO-glTF
	${FBX_SDK_LIBS}/${FBX_SDK_LIBRARY}.dylib
	${CASABLANCA_LIBS}/${CASABLANCA_LIBRARY}.dylib
	${Boost_LIBRARIES} ${Boost_FRAMEWORK}
)

# Support Files
file (
	COPY ${CMAKE_CURRENT_SOURCE_DIR}/glTF-0-8-defaults.json
	DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/
)
file (
	COPY ${CMAKE_CURRENT_SOURCE_DIR}/glTF-0-8.json
	DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/
)

# Dependencies
file (
	COPY ${CASABLANCA_LIBS}/${CASABLANCA_LIBRARY}.dylib
	DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/
)
file (
	COPY ${FBX_SDK_LIBS}/${FBX_SDK_LIBRARY}.dylib
	DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/
)
